<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".logout">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/you_have_logged_out_successfully"
        android:textSize="20sp"
        android:layout_marginTop="100dp"
        android:layout_marginStart="30dp"/>
    <Button
        android:id="@+id/loginAgainbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_again"
        android:layout_marginTop="150dp"
        android:layout_marginStart="100dp"/>
    <Button
        android:id="@+id/exitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:layout_marginTop="200dp"
        android:layout_marginStart="125dp"/>


</FrameLayout>