<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#000">

    <androidx.cardview.widget.CardView
        android:layout_margin="64dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="8dp"
        card_view:cardElevation="8dp"
        android:background="#fff">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_form_title"
                android:textSize="36sp"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/login_form_username" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/activity_main_usernameEditText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:text="@string/login_form_password" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/activity_main_passwordEditText" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/activity_main_loginButton"
                android:text="@string/login_form_login"
                android:onClick="AdminDashboard"
                android:textSize="22sp"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:id="@+id/activity_main_registerButton"
                android:text="@string/register_form_register"
                android:onClick="RegistrationActivity"
                android:layout_marginLeft="20dp"
                android:textSize="12sp"/>
            <Button
                android:layout_width="200dp"
                android:layout_height="45dp"
                android:id="@+id/activity_main_forgotPasswordButton"
                android:text="@string/forgotPassword"
                android:onClick="ForgotPasswordActivity"
                android:layout_marginLeft="20dp"
                android:textSize="12sp"/>
            <TextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="country"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="state"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="city"
                android:textSize="20sp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>